메인좋아요디자인

--- a/templates/racket/racketDetail.html
+++ b/templates/racket/racketDetail.html
@@ -242,7 +242,7 @@ for(i = 0; i < $(".spanVisitorAccount").length; i++){
   if($("#spanUserName").text() == $(".spanVisitorAccount")[i].innerHTML){
     $("#control_id"+i).removeClass("hidden");
     $(".reviewForm").addClass("hidden");
-    $("h4").html("✅이미 리뷰를 남기셨습니다.");
+    $("h4").html("✅ 남겨주신 후기에 감사드립니다.");
 
   }
 }
