--- a/templates/layout.html
+++ b/templates/layout.html
@@ -55,6 +55,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-link" aria-current="page" href="{%url 'racket:racketMain'%}">라켓</a>
+                <a class="nav-link" href="{%url 'player:playerMain'%}" tabindex="-1" aria-disabled="true">선수도감</a>
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">스트링</a>
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">About 세나라</a>
 
