선수생일날짜변경

--- a/templates/player/playerMain.html
+++ b/templates/player/playerMain.html
@@ -54,7 +54,7 @@
                 <div class="d-flex justify-content-center t-bg-gray-300 t-text-[15px]">
                     <ul>
                         <li> {{item.name}}</li>
-                        <li> {{item.birth}}</li>
+                        <li> {{item.birth|date:'Y-m-d'}}</li>
                     </ul>
                 </div>
             </li>
