--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" type="text/css" href="{% static 'common.css' %}">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
+<!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css">-->
+
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -46,8 +48,8 @@
 
 <nav class="navbar navbar-expand-md navbar-dark bg-danger mb-5">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{%url 'main'%}">
-            <img src="https://i.imgur.com/0fDAAdi.png">&nbsp;K 라켓 위키</a>
+        <a class="navbar-brand text-nowrap" href="{%url 'main'%}">
+            <img src="https://i.imgur.com/0fDAAdi.png" class="d-inline-block align-text-center">세상에 나쁜 라켓은 없다</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -67,8 +69,8 @@
         {%if user.is_authenticated%}
 
         <a href="{%url 'account:logOut'%}" >
-            <button type="button" class="btn btn-dark text-nowrap">접속중 : {{user.name}}
-            <img class="t-w-[22px] t-h-[22px] t-rounded-full t-object-fit t-inline-block" src="{{ user.profile_img.url }}"/></button>
+            <button type="button" class="btn btn-dark text-nowrap">{{user.name}}
+            <img class="t-w-[22px] t-h-[22px] t-rounded-full t-object-fit t-inline-block" src="{{ user.profile_img.url }}">&nbsp</button>
         </a>
 
 
