--- a/templates/racket/racketDetail.html
+++ b/templates/racket/racketDetail.html
@@ -23,7 +23,8 @@
                 </div>
                 <div class="card t-tm-3 t-bg-white t-text-black">
                     <div class="card-header">
-                        <div><img class="fadein" src="{{racketItems.thumb_img_url}}" style="aspect-ratio: 1 / 1"
+                        <div class="d-flex justify-content-center">
+                            <img class="fadein mt-3 t-bg-white" src="{{racketItems.thumb_img_url}}" style="aspect-ratio: 1 / 1"
                                   width="50%"></div>
                         <br>
                         <div class="t-text-[10px] sm:t-text-[15px]">
@@ -99,8 +100,9 @@
                 <div class="card t-tm-3 ">
 
                     <h4 class="my-4 t-text-[20px] sm:t-text-[25px]">이 라켓 어떠셨나요?<br>의견을 댓글로 남겨주세요!<br>
-                        <img src="https://media1.giphy.com/media/uADTQTTlpQWeydiHfs/giphy.gif?cid=790b76116267b3b683d11414f434288099844816cf9d736c&rid=giphy.gif&ct=g"
-                             width="200" class="mt-3 fadein">
+                        <span class="d-flex justify-content-center">
+                            <img src="https://media1.giphy.com/media/uADTQTTlpQWeydiHfs/giphy.gif?cid=790b76116267b3b683d11414f434288099844816cf9d736c&rid=giphy.gif&ct=g"
+                             width="200" class="mt-3 "></span>
                     </h4>
                     <div class="reviewForm">
                         <div class="card-footer">
@@ -128,7 +130,7 @@
                                                        type="hidden"></div>
                             <label for="id_content"></label><br>
 
-                            <input type="text" name="visitorReview" class="t-flex-grow textReview"
+                            <input type="text" name="visitorReview" class="t-flex-grow textReview t-border-b-2"
                                    placeholder="한줄평을 작성해주세요(최대 100자)" maxlength="100"
                                    style="width:74%" required id="id_content"><br><br>
 
@@ -148,7 +150,7 @@
                 </div>
             </div>
             <div class="card t-tm-3 ">
-                <h3 class="t-mt-[100px] mb-3 t-text-3xl">사용 후기(✿◡‿◡)</h3>
+                <h3 class="t-mt-[60px] mb-3 t-text-3xl">사용 후기(✿◡‿◡)</h3>
 
                 <div class="card-footer">
                     <table class="table table-hover">
@@ -181,7 +183,7 @@
                             <td>
                                 <span class="t-hidden spanVisitorAccount">{{item1.visitorAccount.username}}</span>
                                 <img class="t-w-[22px] t-h-[22px] t-rounded-full t-object-fit t-inline-block"
-                                     src="{{ item1.visitorAccount.profile_img.url }}"/>
+                                     src="{{ item1.visitorAccount.profile_img.url }}"/>{{item1.visitorAccount.name}}
                                 <span class="control hidden" id="control_id{{ forloop.counter0 }}">
                                 <ul class="d-flex justify-content-center">
                                     <li class="modifyReview{{ item1.id }}">
