--- a/templates/racket/racketMain.html
+++ b/templates/racket/racketMain.html
@@ -52,8 +52,8 @@
                     {% endif %}
                 <a href="{%url 'racket:racketDetail' item.id%}"
                    class="t-block t-block overflow-hidden ">
-                    <img src="{{item.thumb_img_url}}" style="aspect-ratio: 1 / 1" height="%" width="200"
-                         class="t-w-full block t-transition-all t-group-hover:scale-[150%]"><br>
+                    <img src="{{item.thumb_img_url}}" style="aspect-ratio: 1 / 1"
+                         class="t-border t-border-gray-300 t-bg-white t-w-full block t-transition-all group-hover:t-border-yellow-600 group-hover:t-border-4  ">
                 </a>
 
 
