--- a/base/static/common.css
+++ b/base/static/common.css
@@ -477,11 +477,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 0.75rem;
 }
 
-.t-my-\[30px\] {
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
-
 .t-mb-9 {
   margin-bottom: 2.25rem;
 }
@@ -492,10 +487,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .t-ml-\[3px\] {
   margin-left: 3px;
-}
-
-.t-mt-\[100px\] {
-  margin-top: 100px;
 }
 
 .t-mt-\[60px\] {
@@ -573,11 +564,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .t-border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
-}
-
-.t-border-blue-300 {
-  --tw-border-opacity: 1;
-  border-color: rgb(147 197 253 / var(--tw-border-opacity));
 }
 
 .t-bg-gray-500 {
@@ -774,33 +760,54 @@ html > body .hidden{
   display: none;
 }
 
+#playerChar img{
+  position: relative;
+  display: inline-block;
+}
+
+.arrow_box {
+  display: none;
+  position: absolute;
+  width: 100px;
+  padding: 8px;
+  left: 0;
+  border-radius: 8px;
+  background: #333;
+  color: #fff;
+  font-size: 14px;
+}
+
+.arrow_box:after {
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  width: 0;
+  height: 0;
+  margin-left: -10px;
+  border: solid transparent;
+  border-color: rgba(51, 51, 51, 0);
+  border-bottom-color: #333;
+  border-width: 10px;
+  pointer-events: none;
+  content: " ";
+}
+
+span:hover + p.arrow_box {
+  display: block;
+}
+
 .t-group:hover .group-hover\:t-border-4 {
   border-width: 4px;
-}
-
-.t-group:hover .group-hover\:t-border-yellow-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(250 204 21 / var(--tw-border-opacity));
-}
-
-.t-group:hover .group-hover\:t-border-yellow-600 {
-  --tw-border-opacity: 1;
-  border-color: rgb(202 138 4 / var(--tw-border-opacity));
-}
-
-.t-group:hover .group-hover\:t-border-blue-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(59 130 246 / var(--tw-border-opacity));
-}
-
-.t-group:hover .group-hover\:t-border-yellow-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(234 179 8 / var(--tw-border-opacity));
 }
 
 .t-group:hover .group-hover\:t-border-blue-400 {
   --tw-border-opacity: 1;
   border-color: rgb(96 165 250 / var(--tw-border-opacity));
+}
+
+.t-group:hover .group-hover\:t-border-yellow-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(202 138 4 / var(--tw-border-opacity));
 }
 
 @media (min-width: 640px) {
